(library
 (name models)
 (inline_tests)
 (preprocess 
   (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.enum ppx_deriving.ord ppx_inline_test ppx_expect ppx_jane ppx_sexp_message ppx_yojson_conv ppx_fields_conv))
 (libraries utils core core_unix.sys_unix core_unix.time_ns_unix ezcurl uri yojson lz4))
